# verified-generators

./: CONTRIBUTING.md  DEV_GUIDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
tests/: conftest.py  test_generators.py
verified_generators/cohere/: generator.py  specs.py  specs.yml
verified_generators/cohere/tests/: conftest.py  test_cohere.py
verified_generators/openai/: generator.py  specs.py  specs.yml
verified_generators/openai/specs/: openai-specs.yml
verified_generators/sentencetransformers/: generator.py  specs.py
verified_generators/sentencetransformers/specs/: sentencetransformers-specs.yml
