[tool.poetry]
name = "verified-generators"
version = "0.1.0"
description = "Will host generators for the dat project"
authors = ["Riju <rijumone.choudhuri@decision-tree.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dat-core = {git = "https://github.com/dat-labs/dat-core", rev = "main"}
# python = "^3.9"
# dat-core = { path = "/Users/rijumone/Kitchen/dat/dat-core", develop = true}
openai = "^1.23.6"
langchain_openai = "^0.1.3"
#sentence-transformers = "^2.7.0"


[tool.poetry.group.dev.dependencies]
pydantic = "^2.6.3"
pyyaml = "^6.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"