[tool.poetry]
name = "verified-generators"
version = "0.1.0"
description = "Will host generators for the dat project"
authors = ["Riju <rijumone.choudhuri@decision-tree.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dat-core = {git = "https://github.com/dat-labs/dat-core", rev = "main"}
dat-cli = {git = "https://github.com/dat-labs/dat-cli", rev = "main"}
openai = "^1.23.6"
langchain_openai = "^0.1.3"
#sentence-transformers = "^2.7.0"
cohere = "^5.5.6"


[tool.poetry.group.dev.dependencies]
pydantic = "^2.6.3"
pyyaml = "^6.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"